# npd_csviper

./: .gitignore  .gitignore.swp  COMMUNITY.md  ERROR_HANDLING_IMPROVEMENTS.md  ReadMe.md  code.json  csviper.code-workspace  example.env  pyproject.toml  requirements.txt  run_test_compile.sh  setup.py  test_bad_encoding.csv  test_data.csv
AI_Instructions/: HowToDoANewImport.md  UsingCSVLint.md  building_the_project.md  core_design.md  invoker_command.md  prevent_override.md  use_named_parameters.md
AI_Instructions/old_instructions_for_reference/: prevent_override.md
docs/: bronze_nppes_main.py
final_test_dagster/: final_test_dagster.py
misc_scripts/: README_make_new_import.md  idr_go.sh  make_new_import.py
src/csviper/: __main__.py  base_import_script_generator.py  base_schema_generator.py  column_normalizer.py  exceptions.py  import_executor.py  metadata_extractor.py  mysql_import_script_generator.py  mysql_schema_generator.py  postgresql_import_script_generator.py  postgresql_schema_generator.py  script_invoker.py
src/ndh_csviper/: __init__.py  __main__.py
src/npd_csviper/: __main__.py  base_import_script_generator.py  base_schema_generator.py  csv_linter.py  exceptions.py  import_executor.py  metadata_extractor.py  script_invoker.py  (+3 more)
test_bad_encoding_errors/: test_bad_encoding.metadata.json
test_complete/: go.mysql.py  go.postgresql.py
test_dagster_default/: test_dagster_default.py
test_dagster_nppes/: go.postgresql.py  test_dagster_nppes.py
test_data/: go.mysql.py  go.postgresql.py  test_data.create_table_mysql.sql  test_data.import_data_mysql.sql  test_data.metadata.json  test_data_modified.csv  test_encoding_fix.csv
test_data_modified/: go.mysql.py  test_data_modified.import_data_mysql.sql  test_data_modified.metadata.json
test_encoding_errors/: test_encoding_issue.metadata.json
test_encoding_fix_output/: test_encoding_fix.metadata.json
test_final_standalone/: customers.create_table_postgres.sql  go.postgresql.py
test_full_compile/: go.mysql.py  go.postgresql.py  test_data.metadata.json
test_linting_disabled/: customers.metadata.json
test_output/: go.mysql.py  go.postgresql.py
test_refactored_template/: go.postgresql.py
test_template_system/: go.postgresql.py
tests/: test_csv_linter.py  test_header_validation.py
(+33 files in other folders)
